Google APIs Client Library for Objective-C
Release Notes

Project site:     http://code.google.com/p/google-api-objectivec-client/
Discussion group: http://groups.google.com/group/google-api-objectivec-client


30-May-2012

Calendar API now properly exposes GTLDateTimes for max/min times.


15-March-2012

Moved base64 encoding and decoding support to GTLBase64 file.


22-December-2011

Fixed waitForTicket's return value on delete fetches.


12-December-2011

String properties in objects are now copied rather than retained.


1-December-2011

Fixed handling of nil date-time fields in server responses.


17-November-2011

Added interfaces for Calendar.


17-October-2011

Added chunked (resumable) upload support and additional http headers to
query class.


20-September-2011

Added per-query callback blocks, especially useful for queries executes in
a batch.

Added shouldFetchNextPages support for collections fetched in batch queries

Added interfaces for orkut


15-September-2011

Added interfaces for Google Plus.


13-September-2011

Added interfaces for Blogger.


7-September-2011

Added generated interfaces for Google Analytics.


Release 2.0.0
29-August-2011

Initial public release of the JSON-based API library.  Includes standard object,
service, and query classes, and unit tests.  Includes classes for Books,
Latitude, Shopping, Tasks and URL Shortener.